JDT ls bug workaround (aka delete scala source code and not parse it)
