# api/src/main/java/io/codiqo/api/RunArgs.java
@@ -78,6 +78,8 @@ public class RunArgs {
     @Nullable
     private boolean ignoreDiagnostics = false;
     @Nullable
+    private boolean failOnJdtlsError = false;
+    @Nullable
     private transient File javaHome;
     @Nullable
     private transient File mavenHome;
